# spotify-frame

./: .cproject  .gitignore  .project  sdkconfig
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  hardware.h  idf_component.yml  lcd.c  lcd.h  main.c  wifi_manager.c  wifi_manager.h
